--- a/style.css
+++ b/style.css
@@ -6,6 +6,50 @@
 a{
   text-decoration: none;
 }
-.villeDiv{
-  border: 2px solid black;
+body{
+  background-color: rgb(40, 40, 40);
+}
+.divjo, .gridjo{
+  background-color: rgb(239, 239, 239);
+  margin: 1vw;
+  border-radius: 15px;
+  padding: 1vw;
+}
+#forecastGrid{
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto auto auto auto; 
+}
+.forecastHour, .windHour{
+  text-align: center;
+}
+.gridjo > div{
+  background-color: rgb(189, 189, 189);
+  margin: 0.5vw;
+  border-radius: 5px;
+  padding: 0.5vw;
+}
+#windGrid{
+  display: grid;
+  grid-template-columns: 50% auto auto auto;
+  grid-template-rows: auto auto auto auto; 
+}
+#dayGrid{
+  display: grid;
+  grid-template-columns: 25% 50% 25% ;
+  grid-template-rows: auto; 
+}
+#weekDiv, #importanteDiv{
+  max-height: 30vh;
+  overflow-y:scroll;
+}
+.weekDisplay, .dateDisplay{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(189, 189, 189);
+  margin: 0.5vw;
+  border-radius: 5px;
+  padding: 1vw 2vw;
 }
